--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+  <div class="frontIndex">
     <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
