--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/header %>
+
 <link rel="stylesheet" href="/css/background.css">
     <div class="container">
         <div class="jumbotron">
@@ -29,9 +30,6 @@
         </div>
     </div>
 </div>
-
-
-
 <ul class="slideshow">
     <li></li>
     <li></li>
@@ -39,7 +37,5 @@
     <li></li>
     <li></li>
 </ul>
-
+<script src="/js/app.js" ></script>
 <% include ../partials/footer %>
-
-<strong></strong>
