--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,37 +8,50 @@
 </head>
 
 <body>
-  <div class="frontIndex">
-    <nav class="navbar navbar-default">
+    <div class="frontIndex">
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">YelpCamp</a>
+                </div>
+                <form class="navbar-form navbar-left">
+                    <div class="form-group">
+                        <form autocomplete="off" action="/action_page.php">
+                            <div class="autocomplete" style="width:300px;">
+                                <input id="myInput" type="text" class="form-control" name="campgrounds"
+                                    placeholder="Search for Campgrounds">
+                            </div>
+                            <button type="submit" class="searchBtn"><span
+                                    class="glyphicon glyphicon-search"></span></button>
+                        </form>
+
+                    </div>
+                </form>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <% if(!currentUser){ %>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/register">Sign Up</a></li>
+                        <%  } else { %>
+                        <% const user = currentUser.username.substr(0,1).toUpperCase()+currentUser.username.substr(1,currentUser.username.length) %>
+                        <li><a href="#">Logged In As, <%= user %></a></li>
+                        <li><a href="/logout">Logout</a></li>
+                        <% } %>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <% if(error && error.length > 0) { %>
         <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">YelpCamp</a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <% if(!currentUser){ %>
-                    <li><a href="/login">Login</a></li>
-                    <li><a href="/register">Sign Up</a></li>
-                    <%  } else { %>
-                    <% const user = currentUser.username.substr(0,1).toUpperCase()+currentUser.username.substr(1,currentUser.username.length) %>
-                    <li><a href="#">Logged In As, <%= user %></a></li>
-                    <li><a href="/logout">Logout</a></li>
-                    <% } %>
-                </ul>
-            </div>
+            <div class="alert alert-danger" role="alert"><%= error %></div>
         </div>
-    </nav>
-    <% if(error && error.length > 0) { %>
-    <div class="container">
-        <div class="alert alert-danger" role="alert"><%= error %></div>
-    </div>
-    <% } %>
-    <% if(success && success.length > 0) { %>
-    <div class="container">
-        <div class="alert alert-success" role="alert"><%= success %></div>
-    </div>
-    <% } %>
-    <% if(deleteSuccess && deleteSuccess.length > 0) { %>
+        <% } %>
+        <% if(success && success.length > 0) { %>
+        <div class="container">
+            <div class="alert alert-success" role="alert"><%= success %></div>
+        </div>
+        <% } %>
+        <% if(deleteSuccess && deleteSuccess.length > 0) { %>
         <div class="container">
             <div class="alert alert-warning" role="alert"><%= deleteSuccess %></div>
         </div>
