--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -13,7 +13,7 @@
             <input class="form-control" type="text" name="campground[image]" value="<%= campground.image %>">
           </div>
           <div class="form-group">
-            <input class="form-control" type="text" name="campground[description]" value="<%= campground.description %>">
+            <textarea class="form-control" type="text" name="campground[description]"><%= campground.description %></textarea>
           </div>
           <div class="form-group">
             <Button class="btn btn-lg btn-primary btn-block">Submit!</Button>
