--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -15,7 +15,7 @@
           <input class="form-control" type="text" name="image" placeholder="Image URL">
         </div>
         <div class="form-group">
-          <input class="form-control" type="text" name="description" placeholder="Description">
+          <textarea class="form-control" type="text" name="description" placeholder="Description"></textarea>
         </div>
         <div class="form-group">
           <Button class="btn btn-lg btn-primary btn-block">Submit!</Button>
