Make edit form 30% width

--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row">
     <h1 class="addHeader">Add a New Campground</h1>
-    <div id="newCampForm">
+    <div class="campForm">
       <form action="/campgrounds" method="POST">
         <div class="form-group">
           <input class="form-control" type="text" name="name" placeholder="Name">
