--- a/views/campground/edit.ejs
+++ b/views/campground/edit.ejs
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row">
       <h1 class="addHeader">Edit campground <%=campground.name %></h1>
-      <div id="formSpecs">
+      <div class="campForm">
           
         <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
           <div class="form-group">
