--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,60 +1,55 @@
-    <!DOCTYPE html>
-    <html>
+<!DOCTYPE html>
+<html>
 
-    <head>
-        <title>Yelp Camp Basics</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="/css/app.css">
-        <script src="/js/textFormatting.js" type="text/javascript"></script>
-        <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
-    </head>
+<head>
+    <title>Yelp Camp Basics</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/css/app.css">
+    <script src="/js/textFormatting.js" type="text/javascript"></script>
+    <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+</head>
 
-    <body>
-        <div class="frontIndex">
-            <nav class="navbar navbar-default">
-                <div class="container">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" href="/">YelpCamp</a>
-                    </div>
-                    <form class="navbar-form navbar-left">
-                        <div class="form-group">
-                            <form autocomplete="off" action="/action_page.php">
-                                <div class="autocomplete" style="width:300px;">
-                                    <input id="myInput" type="text" class="form-control" name="campgrounds"
-                                        placeholder="Search for Campgrounds">
-                                </div>
-                                <button type="submit" class="searchBtn"><span
-                                        class="glyphicon glyphicon-search"></span></button>
-                            </form>
-
-                        </div>
-                    </form>
-                    <div class="collapse navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <% if(!currentUser){ %>
-                            <li><a href="/login">Login</a></li>
-                            <li><a href="/register">Sign Up</a></li>
-                            <%  } else { %>
-                            <% const user = currentUser.username.substr(0,1).toUpperCase()+currentUser.username.substr(1,currentUser.username.length) %>
-                            <li><a href="#">Logged In As, <%= user %></a></li>
-                            <li><a href="/logout">Logout</a></li>
-                            <% } %>
-                        </ul>
-                    </div>
+<body>
+    <div class="frontIndex">
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">YelpCamp</a>
                 </div>
-            </nav>
-            <% if(error && error.length > 0) { %>
-            <div class="container">
-                <div class="alert alert-danger" role="alert"><%= error %></div>
+                <form action="/campgrounds/search" class="navbar-form navbar-left autocomplete" autocomplete="off" 
+                    method="GET">
+                    <div class="form-group">
+                        <input id="myInput" type="text" class="form-control" name="searchKey"
+                            placeholder="Search for Campgrounds">
+                    </div>
+                    <button type="submit" class="searchBtn"><span class="glyphicon glyphicon-search"></span></button>
+                </form>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <% if(!currentUser){ %>
+                        <li><a href="/login">Login</a></li>
+                        <li><a href="/register">Sign Up</a></li>
+                        <%  } else { %>
+                        <% const user = currentUser.username.substr(0,1).toUpperCase()+currentUser.username.substr(1,currentUser.username.length) %>
+                        <li><a href="#">Logged In As, <%= user %></a></li>
+                        <li><a href="/logout">Logout</a></li>
+                        <% } %>
+                    </ul>
+                </div>
             </div>
-            <% } %>
-            <% if(success && success.length > 0) { %>
-            <div class="container">
-                <div class="alert alert-success" role="alert"><%= success %></div>
-            </div>
-            <% } %>
-            <% if(deleteSuccess && deleteSuccess.length > 0) { %>
-            <div class="container">
-                <div class="alert alert-warning" role="alert"><%= deleteSuccess %></div>
-            </div>
-            <% } %>
+        </nav>
+        <% if(error && error.length > 0) { %>
+        <div class="container">
+            <div class="alert alert-danger" role="alert"><%= error %></div>
+        </div>
+        <% } %>
+        <% if(success && success.length > 0) { %>
+        <div class="container">
+            <div class="alert alert-success" role="alert"><%= success %></div>
+        </div>
+        <% } %>
+        <% if(deleteSuccess && deleteSuccess.length > 0) { %>
+        <div class="container">
+            <div class="alert alert-warning" role="alert"><%= deleteSuccess %></div>
+        </div>
+        <% } %>
