Add slideshow background to login page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,6 @@
 <% include ./partials/header %>
-<div class="container">
+<link rel="stylesheet" href="/css/background.css">
+<div class="container login">
     <div class="row">
         <div class="well">
             <h1 class="text-center">Login</h1>
@@ -19,5 +20,12 @@
         </div>
     </div>
 </div>
+<ul class="slideshow">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
 
 <% include ./partials/footer %>
