--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,9 @@
                         <input id="myInput" type="text" class="form-control" name="searchKey"
                             placeholder="Search for Campgrounds">
                     </div>
-                    <button type="submit" class="searchBtn"><span class="glyphicon glyphicon-search"></span></button>
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-sm btn-primary" value="Search">
+                    </div>
                 </form>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
