--- a/public/css/background.css
+++ b/public/css/background.css
@@ -7,6 +7,11 @@ body{
     position: relative;
 }
 
+.login{
+    z-index: 1;
+    position: relative; 
+}
+
 #landing-header h1{
     color: #fff;
 }
