Add zindex = 1 to login signup on nav

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -40,6 +40,7 @@
                 </div>
             </div>
         </nav>
+        </div>
         <% if(error && error.length > 0) { %>
         <div class="container">
             <div class="alert alert-danger" role="alert"><%= error %></div>
