--- a/public/css/app.css
+++ b/public/css/app.css
@@ -52,6 +52,10 @@ width: 200px;
   white-space: pre-wrap;
 }
 
+.jumbotron,.well{
+  opacity: 0.8;
+}
+
 /*Auto complete css */
 .autocomplete {
     position: absolute;
