--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -1,34 +1,37 @@
 <% include ../partials/header %>
 
 <link rel="stylesheet" href="/css/background.css">
-    <div class="container">
-        <div class="jumbotron">
-            <div class="container">
-                <h1>Welcome to YelpCamp!</h1>
-                <a class="button btn-primary btn-lg" href="/campgrounds/new">Add new campgrounds</a>
-            </div>
-
-        </div>
-
-        <div class="row text-center" style="display: flex; flex-wrap: wrap;">
-            <% campgrounds.forEach((campground) =>{ %>
-
-            <div class="col-md-3 col-sm-6 image">
-                <div class="thumbnail">
-                    <img src=" <%= campground.image %> ">
-                    <div class="caption">
-                        <h4><%= campground.name %></h4>
-                    </div>
-                    <p>
-                        <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
-                    </p>
-
-                </div>
-            </div>
-
-            <%}) %>
+<div class="container">
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Welcome to YelpCamp!</h1>
+            <a class="button btn-primary btn-lg" href="/campgrounds/new">Add new campgrounds</a>
         </div>
     </div>
+
+    <div class="alert alert-info" role="alert">
+        <strong>Note: </strong> This application is still under development
+    </div>
+
+    <div class="row text-center" style="display: flex; flex-wrap: wrap;">
+        <% campgrounds.forEach((campground) =>{ %>
+
+        <div class="col-md-3 col-sm-6 image">
+            <div class="thumbnail">
+                <img src=" <%= campground.image %> ">
+                <div class="caption">
+                    <h4><%= campground.name %></h4>
+                </div>
+                <p>
+                    <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                </p>
+
+            </div>
+        </div>
+
+        <%}) %>
+    </div>
+</div>
 </div>
 <ul class="slideshow">
     <li></li>
@@ -37,5 +40,5 @@
     <li></li>
     <li></li>
 </ul>
-<script src="/js/app.js" ></script>
+<script src="/js/app.js"></script>
 <% include ../partials/footer %>
