--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -15,7 +15,7 @@
 
     </div>
     <div class="col-md-9">
-      <div class="thumbnail">
+      <div class="thumbnail showCamp">
         <img class="img-responsive" src="<%= campground.image %>">
         <div class="caption">
           <h4><a><%= campground.name %></a>
