--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <% include ./partials/header %>
 <link rel="stylesheet" href="/css/background.css">
-<div class="container login">
+<div class="container logins">
     <div class="row">
         <div class="well">
             <h1 class="text-center">Login</h1>
@@ -20,12 +20,6 @@
         </div>
     </div>
 </div>
-<ul class="slideshow">
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ul>
+
 
 <% include ./partials/footer %>
