--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
 <% include ./partials/header %>
+<link rel="stylesheet" href="/css/background.css">
 <div class="container">
     <div class="row">
         <div class="well">
