--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,12 +29,12 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <% if(!currentUser){ %>
-                        <li><a href="/login">Login</a></li>
-                        <li><a href="/register">Sign Up</a></li>
+                        <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        <li><a href="/register"><span class="glyphicon glyphicon-plus"></span> Sign Up</a></li>
                         <%  } else { %>
                         <% const user = currentUser.username.substr(0,1).toUpperCase()+currentUser.username.substr(1,currentUser.username.length) %>
                         <li><a href="#">Logged In As, <%= user %></a></li>
-                        <li><a href="/logout">Logout</a></li>
+                        <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         <% } %>
                     </ul>
                 </div>
