--- a/public/css/app.css
+++ b/public/css/app.css
@@ -55,6 +55,10 @@ div.well:first-child{
     margin-right: auto;
 }
 
+#leftbarHomeLink{
+  color: rgb(236, 240, 240);
+} 
+
 input.login{
 width: 200px;
 }
