--- a/views/campground/show.ejs
+++ b/views/campground/show.ejs
@@ -6,7 +6,7 @@
       <a href="/campgrounds">
         <p><i class="glyphicon glyphicon-arrow-left"></i> Go Back</p>
       </a>
-      <h3 id="leftbarHomeLink"><a href="/">Yelp Camp</a></h3>
+      <h3><a href="/" id="leftbarHomeLink">Yelp Camp</a></h3>
       <div class="list-group">
         <a href="#" class="list-group-item active">Category 1</a>
         <a href="#" class="list-group-item">Category 2</a>
