--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -15,7 +15,7 @@
     <div class="row text-center" style="display: flex; flex-wrap: wrap;">
         <% campgrounds.forEach((campground) =>{ %>
 
-        <div class="col-md-3 col-sm-6 image">
+        <div class="col-md-3 col-sm-6 col-xs-12 image">
             <div class="thumbnail">
                 <img src=" <%= campground.image %> ">
                 <div class="caption">
