--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,27 +7,39 @@
     <link rel="stylesheet" type="text/css" href="/css/app.css">
     <link rel="stylesheet" href="/css/background.css">
     <script src="/js/textFormatting.js" type="text/javascript"></script>
+    <script src="/js/lib/jQuery.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
 </head>
 
 <body>
     <div class="frontIndex">
         <nav class="navbar navbar-default">
-            <div class="container">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#navContents" aria-expanded="false">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
                     <a class="navbar-brand" href="/">YelpCamp</a>
                 </div>
-                <form action="/campgrounds/search" class="navbar-form navbar-left autocomplete" autocomplete="off" 
-                    method="GET">
-                    <div class="form-group">
-                        <input id="myInput" type="text" class="form-control" name="searchKey"
-                            placeholder="Search for Campgrounds">
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" class="btn btn-sm btn-primary" value="Search">
-                    </div>
-                </form>
-                <div class="collapse navbar-collapse">
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="navContents">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li>
+                            <form action="/campgrounds/search" class="navbar-form navbar-left" autocomplete="off" method="GET">
+                                <div class="form-group">
+                                    <input id="myInput" type="text" class="form-control" name="searchKey"
+                                        placeholder="Search for Campgrounds">
+                                </div>
+                                <div class="form-group">
+                                    <input type="submit" class="btn btn-sm btn-default" value="Search">
+                                </div>
+                            </form>
+                        </li>
+                    </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <% if(!currentUser){ %>
                         <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
@@ -38,8 +50,8 @@
                         <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                         <% } %>
                     </ul>
-                </div>
-            </div>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
         </nav>
         <% if(error && error.length > 0) { %>
         <div class="container">
