--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
                     <div class="form-group text-center">
                         <input type="submit" class="btn btn-success login" value="Login">
                     </div>
-                    <a href="/register">Not a member? Become one<i class="glyphicon glyphicon-chevron-right"></i></a>
+                    <a href="/register">Not a member? Sign Up</a>
                 </form>
             </div>
         </div>
