--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,10 +14,10 @@
                     <div class="form-group">
                         <input class="form-control" type="password" name="password" placeholder="password">
                     </div>
-                    <div class="form-group">
-                        <button class="btn btn-large btn-primary">Sign Up</button>
+                    <div class="form-group text-center">
+                        <input type="submit" class="btn btn-success login" value="Sign Up">
                     </div>
-
+                    <a href="/login">Already a member? Login</a>
                 </form>
             </div>
         </div>
