Add width 100% to input.login and input.register

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,8 +60,8 @@ div.well:first-child{
   color: rgb(236, 240, 240);
 } 
 
-input.login{
-width: 200px;
+input.login, input.register{
+width: 100%;
 }
 
 .deleteForm{
