--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,16 +6,16 @@
             <div class="formSpecs">
                 <form action="/register" method="POST">
                     <div class="form-group">
-                        <input class="form-control" type="text" name="username" placeholder="User Name">
+                        <input class="form-control register" type="text" name="username" placeholder="User Name">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name="email" placeholder="Email">
+                        <input class="form-control register" type="text" name="email" placeholder="Email">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="password" name="password" placeholder="password">
+                        <input class="form-control register" type="password" name="password" placeholder="password">
                     </div>
                     <div class="form-group text-center">
-                        <input type="submit" class="btn btn-success login" value="Sign Up">
+                        <input type="submit" class="btn btn-success login register" value="Sign Up">
                     </div>
                     <a href="/login">Already a member? Login</a>
                 </form>
