--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,26 @@
+@media screen and (min-width: 700px)
+{
+  .formSpecs{
+    width: 30%;
+    margin:0 auto;
+}
+
+@media screen and (max-width: 700px)
+{
+  .formSpecs{
+    width: 60%;
+    margin:0 auto;
+}
+}
+
+}
+
 .addHeader{
     text-align: center;
 }
 
-.formSpecs{
-    width: 30%;
-    margin:0 auto;
-}
+
+
 
 .frontIndex{
   z-index: 1;
