Add camping glyphicon to heading

--- a/views/campground/index.ejs
+++ b/views/campground/index.ejs
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="jumbotron">
         <div class="container">
-            <h1>Welcome to YelpCamp!</h1>
+            <h1><span class="glyphicon glyphicon-tent"></span> Welcome to YelpCamp!</h1>
             <a class="button btn-primary btn-lg" href="/campgrounds/new">Add new campgrounds</a>
         </div>
     </div>
