--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -30,7 +30,7 @@
     </div>
 
     <div id="landing-header">
-        <h1>Welcome to YelpCamp!</h1>
+        <h1><span class="glyphicon glyphicon-tent"></span> Welcome to YelpCamp!</h1>
         <a href="/campgrounds" class="btn btn-lg btn-success">View All Campgrounds</a>
     </div>
 
