Add forgot password option in login form ejs

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
                     <div class="form-group text-center">
                         <input type="submit" class="btn btn-success login" value="Login">
                     </div>
-                    <a href="/register">Not a member? Sign Up</a>
+                    <span class="form-switch"><a href="/forgot"> Forgot password?</a> <span id="bar">|</span> <a href="/register">Not a member? Sign Up</a></span>
                 </form>
             </div>
         </div>
