--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,19 +6,25 @@
             <div class="formSpecs">
                 <form action="/register" method="POST">
                     <div class="form-group">
-                        <input class="form-control register" type="text" name="username" placeholder="User Name">
+                        <label for="username">User Name:</label>
+                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter User Name">
                     </div>
                     <div class="form-group">
-                        <input class="form-control register" type="text" name="email" placeholder="Email">
+                        <label for="emailAddress">Email Address:</label>
+                        <input type="email" class="form-control" id="emailAddress" name="email" placeholder="Enter Email Address">
                     </div>
                     <div class="form-group">
-                        <input class="form-control register" type="password" name="password" placeholder="password">
+                        <label for="password">Password:</label>
+                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" onchange='check_pass();'>
                     </div>
-                    <div class="form-group text-center">
-                        <input type="submit" class="btn btn-success login register" value="Sign Up">
-                    </div>
-                    <a href="/login">Already a member? Login</a>
-                </form>
+                    <div class="form-group">
+                            <label for="confirmpassword">Confirm Password:</label>
+                            <input type="password" class="form-control" id="confirm_password" placeholder="Re-Enter Password"  >
+                        </div>
+                    <span id='message'></span>
+                    <button type="submit" id="submit" class="btn btn-primary" disabled>Submit</button>
+                    <a class="form-switch" href="/login">Already a member? Login</a>
+                </form>  
             </div>
         </div>
 
