Add well class to new campground form

--- a/views/campground/new.ejs
+++ b/views/campground/new.ejs
@@ -2,6 +2,7 @@
 
 <div class="container">
   <div class="row">
+      <div class="well">
     <h1 class="addHeader">Add a New Campground</h1>
     <div class="campForm">
       <form action="/campgrounds" method="POST">
@@ -22,6 +23,7 @@
         </div>
       </form>
       <a href="/campgrounds">Go Back!</a>
+    </div>
     </div>
   </div>
 </div>
