--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,7 +8,9 @@
   display: block;
   margin-top: 5px;
   float: right;
-}
+ }
+
+
 }
 
 @media screen and (max-width: 700px)
@@ -17,9 +19,15 @@
     width: 60%;
     margin:0 auto;
  }
+ #submit{
+  display: block;
+}
 }
 
-
+.formSpecs{
+  margin-left: auto;
+  margin-right: auto;
+}
 .addHeader{
     text-align: center;
 }
@@ -27,8 +35,6 @@
 textarea{
   background-color: white;
 }
-
-
 
 .frontIndex{
   z-index: 1;
