--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,22 +7,26 @@
             <div class="formSpecs">
                 <form action="/register" method="POST">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="username" name="username" placeholder="Enter User Name">
+                        <input type="text" class="form-control" id="username" name="username"
+                            placeholder="Enter User Name">
                         <button type="button" class="btn btn-default" id="checkAvailability">Check Availability</button>
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control" id="emailAddress" name="email" placeholder="Enter Email Address">
+                        <input type="email" class="form-control" id="emailAddress" name="email"
+                            placeholder="Enter Email Address">
                     </div>
                     <div class="form-group">
-                        <input type="password" class="form-control" id="password" name="password" placeholder="Enter Password" onchange='check_pass();'>
+                        <input type="password" class="form-control" id="password" name="password"
+                            placeholder="Enter Password" onchange='check_pass();'>
                     </div>
                     <div class="form-group">
-                            <input type="password" class="form-control" id="confirm_password" placeholder="Re-Enter Password"  >
-                        </div>
+                        <input type="password" class="form-control" id="confirm_password"
+                            placeholder="Re-Enter Password">
+                    </div>
                     <span id='message'></span>
                     <button type="submit" id="submit" class="btn btn-primary" disabled>Submit</button>
                     <a class="switch-to-login" href="/login">Already a member? Login</a>
-                </form>  
+                </form>
             </div>
         </div>
 
@@ -30,11 +34,11 @@
 </div>
 
 <script>
-        var ca = document.getElementById("checkAvailability");
-        if(ca){
-            ca.addEventListener("click",function(){
-      var username = document.getElementById('username').value;
-    
+    var ca = document.getElementById("checkAvailability");
+    if (ca) {
+        ca.addEventListener("click", function () {
+            var username = document.getElementById('username').value;
+
         })
     }
 </script>
