Add oauth authentication for sending emails

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -24,7 +24,7 @@
                             placeholder="Re-Enter Password">
                     </div>
                     <span id='message'></span>
-                    <button type="submit" id="submit" class="btn btn-primary" disabled>Submit</button>
+                    <button type="submit" id="submit" class="btn btn-primary" onclick = "get()" disabled>Submit</button>
                     <a class="switch-to-login" href="/login">Already a member? Login</a>
                 </form>
             </div>
